@@ -1,0 +1,1 @@
+W: scripts-unconditional-use-of-dpkg-statoverride: unconditional-use-of-dpkg-statoverride postinst:6
