@@ -62,6 +62,8 @@ lintian (2.5.52) UNRELEASED; urgency=medium
       I: to W:. See #829744 for more info.
     + [CL] Clarify wording in new-package-should-not-package-python2-module
       to make the justification clearer.
+    + [CL] Check for calls to dpkg-statoverride --add without a
+      corresponding --list.  (Closes: #652963)
   * checks/rules.desc:
     + [CL] Clarify wording in debian-rules-parses-dpkg-parsechangelog to
       make the justification clearer.  (Closes: #865882)
